# UnknownEngine2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UnknownEngine2.kdev4
.kdev4/: UnknownEngine2.kdev4
CMakeModules/: CMakeLists.txt  Cotire.cmake  DetectCompiler.cmake  GenerateMSVCFilters.cmake  PCHSupport.cmake  UnknownEngineModuleUtils.cmake
CMakeModules/CompilerFlags/: MSVC.cmake
Core/: CMakeLists.txt
Core/Engine/: CMakeLists.txt  Synchronizable.h
Core/Entities/: CMakeLists.txt
Core/Input/: CMakeLists.txt
Core/Logging/: CMakeLists.txt  ILogRecord.h  ILogStream.h
Core/Math/: CMakeLists.txt  Scalar.h
Core/Memory/: AlignedRawAllocator.h  CMakeLists.txt  IRawAllocator.h  MemoryManager.cpp  MemoryManager.h  New.cpp  New.h  Policies.h  SimpleMallocRawAllocator.cpp  SimpleMallocRawAllocator.h  TypedAllocator.h  stdafx.h
Core/Messages/: CMakeLists.txt  IMessage.h  IMessageQueue.h  IMessageType.h  IMessageTypeMetaInfo.h  MessageType.h  MessageTypeMetaInfo.h
Core/OS/: CMakeLists.txt  DLLUtils.h  DLLUtils.unix.cpp  DLLUtils.windows.cpp
Core/Plugins/: CMakeLists.txt  IPlugin.h  PluginVersion.h  PluginsManager.cpp  PluginsManager.h  stdafx.h
Core/Profiling/: CMakeLists.txt  FunctionSignatureMacros.h  IProfilerInstance.h  ProfileMacros.h  ProfileManager.cpp  ProfileManager.h  RAIIFunctionProfiler.cpp  RAIIFunctionProfiler.h  stdafx.h
Core/Reflection/: CMakeLists.txt  IMetaType.h  IPropertiesMap.h  IProperty.h  IPropertyTypeMetaInfo.h  ITypeMetaInfo.h  PropertyTypeMetaInfo.h  Reflectable.h  ReflectionManager.cpp  ReflectionManager.h  TypeSize.h
Core/Resources/: CMakeLists.txt
Core/Scene/: CMakeLists.txt  ComponentDesc.h  ComponentType.h  IComponent.h  ISceneObject.h  SceneManager.cpp  SceneManager.h
Core/Scene/impl/: SceneManager.cpp  SceneObject.cpp  SceneObject.h
Core/Serialization/: CMakeLists.txt  IArchive.h  Serializable.h
Core/State/: CMakeLists.txt  StateManager.h  Synchronizable.h  SynchronizationList.h  SynchronizationState.h
Core/Subsystems/: CMakeLists.txt  ISubsystem.h  ISubsystemFactory.h  SubsystemDesc.h  SubsystemManager.h  SubsystemPredicate.h  SubsystemsManager.cpp  SubsystemsManager.h
Core/Tasks/: CMakeLists.txt  ITask.h
Plugins/: CMakeLists.txt
Plugins/Graphics/: CMakeLists.txt
Plugins/Physics/: CMakeLists.txt
Plugins/SamplePlugin/: CMakeLists.txt  SamplePlugin.cpp
Plugins/Script/: CMakeLists.txt
Prototypes/: CMakeLists.txt
Prototypes/Core/: CMakeLists.txt
Prototypes/Formats/: ObjectTemplate.json
Test/TestApplication/: CMakeLists.txt  main.cpp
Utils/: CMakeLists.txt
(+49 files in other folders)
