add_subdirectory(Engine)
add_subdirectory(Entities)
add_subdirectory(Input)
add_subdirectory(Logging)
add_subdirectory(Math)
add_subdirectory(Messages)
add_subdirectory(OSAbstraction)
add_subdirectory(Plugins)
add_subdirectory(Profiling)
add_subdirectory(Reflection)
add_subdirectory(Resources)
add_subdirectory(Serialization)
add_subdirectory(State)
add_subdirectory(Subsystems)
add_subdirectory(Tasks)
